refine ui drop down on mobile - kill bugs

--- a/app/assets/stylesheets/styles/_side-bar.scss
+++ b/app/assets/stylesheets/styles/_side-bar.scss
@@ -12,7 +12,7 @@
   overflow-y: scroll;
   background: #333;
   border-top: 4px solid $highlight;
-  transition: transform .4s ease-out;
+  transition: transform .4s ease-out, margin .4s ease-out;
   z-index: 1;
 
   &.slide-up {
@@ -20,7 +20,11 @@
     margin-top: 53px;
   }
 
-  &.filters-open { height: 100%; }
+  &.filters-open {
+    transform: none;
+    margin-top: 0;
+    height: 100%;
+  }
 
   @media (min-width:$break-large) {
     width: $sidebar-width;
